--- a/web page/index.html
+++ b/web page/index.html
@@ -16,7 +16,7 @@
                 <p>Location: Virtual</p>
                 <p>Stipend: -</p>
                 <p>Start date: 05/11/2023</p>
-                <a href="#" class="button">View Details</a>
+                <a href="https://www.vaultofcodes.in/courses/506813" class="button">View Details</a>
             </div>
             <div class="card">
                 <h2>App Development Internship Program</h2>
@@ -24,7 +24,7 @@
                 <p>Location: Virtual</p>
                 <p>Stipend: -</p>
                 <p>Start date: 05/11/2023</p>
-                <a href="#" class="button">View Details</a>
+                <a href="https://www.vaultofcodes.in/courses" class="button">View Details</a>
             </div>
             <div class="card">
                 <h2>Python Programming Internship Program</h2>
@@ -32,7 +32,7 @@
                 <p>Location: Virtual</p>
                 <p>Stipend: -</p>
                 <p>Start date: 05/11/2023</p>
-                <a href="#" class="button">View Details</a>
+                <a href="https://www.vaultofcodes.in/courses/506722" class="button">View Details</a>
             </div>
             <div class="card">
                 <h2>Java Programming Internship Program</h2>
@@ -40,7 +40,7 @@
                 <p>Location: Virtual</p>
                 <p>Stipend: -</p>
                 <p>Start date: 05/11/2023</p>
-                <a href="#" class="button">View Details</a>
+                <a href="https://www.vaultofcodes.in/courses/506804" class="button">View Details</a>
             </div>
         </div>
     </div>
